WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103010
It should be possible to say disassemble(stuff) instead of having to say if (!tryToDisassemble(stuff)) dataLog("I failed")
https://bugs.webkit.org/show_bug.cgi?id=103010
Summary
It should be possible to say disassemble(stuff) instead of having to say if (...
Filip Pizlo
Reported
2012-11-21 19:25:20 PST
We should have a default "disassembler" that just prints the instruction ranges.
Attachments
the patch
(12.72 KB, patch)
2012-11-21 19:33 PST
,
Filip Pizlo
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-11-21 19:33:52 PST
Created
attachment 175569
[details]
the patch
Filip Pizlo
Comment 2
2012-11-21 19:48:10 PST
Landed in
http://trac.webkit.org/changeset/135466
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug