Source/JavaScriptCore/assembler/LinkBuffer.cpp
@@ -53,8 +53,7 @@ LinkBuffer::CodeRef LinkBuffer::finalizeCodeWithDisassembly(const char* format, 
     dataLog(":\n");
     
     dataLog("    Code at [%p, %p):\n", result.code().executableAddress(), static_cast<char*>(result.code().executableAddress()) + result.size());
-    if (!tryToDisassemble(result.code(), m_size, "    ", WTF::dataFile()))
-        dataLog("        <no disassembly available>\n");
+    disassemble(result.code(), m_size, "    ", WTF::dataFile());
     
     return result;
 }
